db and swagger init
